<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oscar.hdn2_oscar_crespo.fragments.PerfilFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ImageView android:id="@+id/imgFotoPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/imagen_perfil"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingBottom="20dp"
    android:paddingRight="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/myColorTextDark"
        android:textSize="18dp"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp" />

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@color/myColorTextDark"
            android:textSize="18dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/myColorTextDark"
            android:textSize="18dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

    </LinearLayout>

    <Button android:id="@+id/btnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarFoto"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@color/myColorPrimary"
        android:textColor="@color/myColorWhite"/>


</LinearLayout>
